--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <a routerLink="/">
-      <img src="../../../assets/pokeapi_256.png" alt="PokeAPI">
+      <img src="./assets/pokeapi_256.png" alt="PokeAPI">
     </a>
     <nav>
       <a routerLink="/my-pokemons">My Pokemons</a>
