--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <div class="not-found">
-  <img src="../../../assets/pokeball-close.png" alt="Not Found">
+  <img src="./assets/pokeball-close.png" alt="Not Found">
   <h1>Ups!! - Not Found</h1>
 </div>
