--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --red: #f44336;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.btn-block {
+  width: 100%;
+}
