--- a/src/app/dashboard/layout/layout.component.html
+++ b/src/app/dashboard/layout/layout.component.html
@@ -1,38 +1,19 @@
-<mat-toolbar color="warn">
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-    (click)="drawer.toggle()"
-  >
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button
-    mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon>share</mat-icon>
-  </button>
-</mat-toolbar>
 <mat-drawer-container class="main-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
-    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-    <button (click)="showFiller = !showFiller" mat-raised-button>
-      Toggle extra text
+  <mat-drawer #drawer class="sidenav" mode="side" opened> </mat-drawer>
+  <mat-toolbar color="warn" class="toolbar-main">
+    <h1>Travel</h1>
+    <button mat-icon-button aria-label="Menu" (click)="drawer.toggle()">
+      <mat-icon>menu</mat-icon>
     </button>
-  </mat-drawer>
-  <div class="example-sidenav-content">
-    <h1>Hola mundo</h1>
+  </mat-toolbar>
+  <div class="main-container-content">
+    <mat-card>
+      <mat-card-title>Usuarios</mat-card-title>
+      <mat-card-subtitle>Total de usuarios: 500</mat-card-subtitle>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </mat-drawer-container>
