--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import './app//styles/custom_theme';
+@import './app//styles/custom-theme';
 
 :root {
   --red: #f44336;
@@ -18,4 +18,15 @@ body {
 
 .btn-block {
   width: 100%;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+  background-color: #f5f8fa;
+  border-color: #f5f8fa;
+  color: #5e6278;
+  transition: color 0.2s ease, background-color 0.2s ease;
+}
+
+.form-control {
+  margin-bottom: 0.75rem;
 }
