--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,19 +1,1 @@
-<mat-drawer-container class="main-container" autosize>
-  <mat-drawer #drawer class="sidenav" mode="side" opened> </mat-drawer>
-  <mat-toolbar color="warn" class="toolbar-main">
-    <h1>Travel</h1>
-    <button mat-icon-button aria-label="Menu" (click)="drawer.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-  </mat-toolbar>
-  <div class="main-container-content">
-    <mat-card>
-      <mat-card-title>Usuarios</mat-card-title>
-      <mat-card-subtitle>Total de usuarios: 500</mat-card-subtitle>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</mat-drawer-container>
+<h1>Layout</h1>
