change form field style

--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -4,7 +4,7 @@
       <label class="login-title">TRAVEL</label>
       <div class="form-control">
         <mat-form-field appearance="fill">
-          <mat-label>Email</mat-label>
+          <mat-label>Correo electrónico</mat-label>
           <input
             matInput
             placeholder="Ingrese su usuario"
@@ -21,7 +21,7 @@
       </div>
       <div class="form-control">
         <mat-form-field appearance="fill">
-          <mat-label>Password</mat-label>
+          <mat-label>Contraseña</mat-label>
           <input
             type="password"
             matInput
