add token to requests

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="main-container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side" opened></mat-drawer>
   <mat-toolbar color="warn" class="toolbar-main">
-    <h1>Travel</h1>
+    <h1 routerLink="/">Travel</h1>
     <button mat-icon-button aria-label="Menu" (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
