add refresh token

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,7 +1,17 @@
 <mat-drawer-container class="main-container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side" opened></mat-drawer>
   <mat-toolbar color="warn" class="toolbar-main">
-    <h1 routerLink="/">Travel</h1>
+    <h1 routerLink="/">
+      <img
+        src="../../../assets/img/logo.svg"
+        alt="Travel"
+        width="60px"
+        verticalalign="middle"
+      />
+      Travel
+    </h1>
+    <a routerLink="test">Test</a>
+    <a routerLink="users">Users</a>
     <button mat-icon-button aria-label="Menu" (click)="drawer.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
