--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,5 +1,10 @@
 <div class="d-flex align-items-center justify-content-center login">
   <mat-card>
+    <img
+      src="../../../../assets/img/airplane.svg"
+      alt="Airplane"
+      width="100px"
+    />
     <form [formGroup]="form" (ngSubmit)="handleSubmit()" autocomplete="off">
       <label class="login-title">TRAVEL</label>
       <div class="form-control">
