--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -2,7 +2,7 @@
   <mat-card-title>Usuarios</mat-card-title>
   <mat-card-subtitle>Inicio - Usuarios</mat-card-subtitle>
   <mat-card-content>
-    <table mat-table [dataSource]="users$ | async" class="table">
+    <table mat-table [dataSource]="dataSource" class="table">
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
