--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -1,14 +1,48 @@
 .login {
+  background: url('../../../../assets/img/bg-1.jpeg') no-repeat center / cover
+    fixed;
   width: 100vw;
   height: 100vh;
+  position: relative;
+  z-index: 1;
+
+  &:after {
+    content: '';
+    background: rgba(#000, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+  }
 
   &-title {
     color: var(--red);
     display: block;
     font-weight: bold;
-    font-size: 2rem;
-    margin-bottom: 3rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    padding-top: 1.5rem;
     text-align: center;
+
+    span {
+      display: block;
+    }
+  }
+
+  &-img {
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    width: 100%;
+  }
+
+  &-label-session {
+    color: #181c32;
+    display: block;
+    text-align: center;
+    margin-bottom: 1.5rem;
   }
 
   form {
