add css media queries

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -8,7 +8,7 @@
     />
     <form [formGroup]="form" (ngSubmit)="handleSubmit()" autocomplete="off">
       <label class="login-label-session">
-        Utiliza tus credenciales de acceso.
+        Utiliza tus credenciales de acceso
       </label>
       <div class="form-control">
         <mat-form-field appearance="fill">
