--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -1,3 +1,5 @@
+@import 'mq';
+
 .login {
   background: url('../../../../assets/img/bg-1.jpeg') no-repeat center / cover
     fixed;
@@ -46,8 +48,13 @@
   }
 
   form {
-    min-width: 350px;
-    padding: 2rem 1rem;
+    padding: 1rem;
+
+    @include mq(md) {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      min-width: 350px;
+    }
   }
 
   mat-form-field {
