--- a/src/app/styles/_custom-theme.scss
+++ b/src/app/styles/_custom-theme.scss
@@ -3,12 +3,14 @@
 
 $my-primary: mat.define-palette(mat.$blue-gray-palette, 300, 400);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$my-warn: mat.define-palette(mat.$red-palette, 500, 600);
 
 $my-theme: mat.define-light-theme(
   (
     color: (
       primary: $my-primary,
       accent: $my-accent,
+      warn: $my-warn,
     ),
   )
 );
