--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -18,13 +18,10 @@
             placeholder="Ingrese su usuario"
             formControlName="email"
           />
-          <mat-error *ngIf="email?.touched && email?.hasError('required')">
-            {{ errors['required'] }}
-          </mat-error>
-          <mat-error
-            *ngIf="email?.touched && email?.hasError('email') && email?.value"
-            >{{ errors['email'] }}
-          </mat-error>
+          <mat-error *ngIf="requiredEmail">{{ formError.required }}</mat-error>
+          <mat-error *ngIf="invalidEmail">{{
+            formError.invalid_email
+          }}</mat-error>
         </mat-form-field>
       </div>
       <div class="form-control">
@@ -36,10 +33,8 @@
             placeholder="Ingrese su contraseña"
             formControlName="password"
           />
-          <mat-error
-            *ngIf="password?.touched && password?.hasError('required')"
-          >
-            {{ errors['required'] }}
+          <mat-error *ngIf="requiredPassword">
+            {{ formError.required }}
           </mat-error>
         </mat-form-field>
       </div>
