--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,10 @@ body {
   overflow-x: hidden;
 }
 
+.loading-overlay {
+  overflow: hidden;
+}
+
 .mat-raised-button.btn-block {
   width: 100%;
 }
