--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,12 @@ body {
 .mat-raised-button.mat-warn {
   background-color: var(--red);
 }
+
+.badge-danger {
+  color: #f1416c;
+  background-color: #fff5f8;
+  text-align: center;
+  padding: 0.75rem 1rem;
+  font-weight: 600;
+  border-radius: 0.475rem;
+}
