--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-spinner [show]="showLoading"></app-spinner>
+<button (click)="openSwal()">Do it!</button>
 <router-outlet></router-outlet>
+<swal
+  #deleteSwal
+  title="Delete this?"
+  text="This cannot be undone"
+  icon="warning"
+  [showCancelButton]="true"
+  [focusCancel]="true"
+>
+</swal>
