--- a/src/app/shared/components/alert/alert.component.scss
+++ b/src/app/shared/components/alert/alert.component.scss
@@ -6,7 +6,7 @@
     color: #545454;
     font-weight: 400;
     margin-bottom: 1.5rem;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -20,6 +20,7 @@
   position: relative;
   width: 80px;
 
+  &.modal-success,
   &.modal-error {
     border-color: #a5dc86;
 
@@ -135,12 +136,72 @@
   animation: animateErrorIcon 0.5s;
 }
 
+.animate-success-tip {
+  animation: animateSuccessTip 0.75s;
+}
+
+.animate-success-long {
+  animation: animateSuccessLong 0.75s;
+}
+
+.modal-icon.modal-success.animate:after {
+  animation: rotatePlaceholder 4.25s ease-in;
+}
+
 .animate-x-left {
   animation: animateXLeft 0.75s;
 }
 
 .animate-x-right {
   animation: animateXRight 0.75s;
+}
+
+@keyframes animateSuccessTip {
+  0%,
+  54% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+
+  70% {
+    width: 50px;
+    left: -8px;
+    top: 37px;
+  }
+
+  84% {
+    width: 17px;
+    left: 21px;
+    top: 48px;
+  }
+
+  100% {
+    width: 25px;
+    left: 14px;
+    top: 45px;
+  }
+}
+
+@keyframes animateSuccessLong {
+  0%,
+  65% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+
+  84% {
+    width: 55px;
+    right: 0;
+    top: 35px;
+  }
+
+  100% {
+    width: 47px;
+    right: 8px;
+    top: 38px;
+  }
 }
 
 @keyframes rotatePlaceholder {
