--- a/src/app/shared/components/alert/alert.component.html
+++ b/src/app/shared/components/alert/alert.component.html
@@ -11,7 +11,8 @@
     <div class="modal-placeholder"></div>
     <div class="modal-fix"></div>
   </div>
-
   <h2>{{ message }}</h2>
-  <button mat-raised-button focus="false" color="warn">Aceptar</button>
+  <button mat-raised-button focus="false" color="warn" (click)="closeModal()">
+    Aceptar
+  </button>
 </div>
