--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -8,22 +8,7 @@
 </mat-toolbar>
 <mat-drawer-container class="main-container" autosize>
   <mat-drawer #drawer class="sidenav" mode="side" opened>
-    <div class="sidenav-wrapper">
-      <nav>
-        <ul>
-          <li>
-            <span>Administración de usuarios</span>
-            <ul>
-              <li>
-                <a href="">Usuarios</a>
-                <a href="">Roles AV</a>
-                <a href="">Roles Coporativos</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <app-sidenav></app-sidenav>
   </mat-drawer>
   <div class="main-container-content">
     <router-outlet></router-outlet>
