--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <nav class="sidenav-wrapper">
   <mat-accordion>
-    <mat-expansion-panel hideToggle>
+    <mat-expansion-panel expanded hideToggle>
       <mat-expansion-panel-header>
         <mat-panel-title> Administración de usuarios</mat-panel-title>
       </mat-expansion-panel-header>
