--- a/src/app/modules/users/users-list/users-list.component.scss
+++ b/src/app/modules/users/users-list/users-list.component.scss
@@ -1,3 +1,10 @@
 .table {
   width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .table-wrap {
+    width: 100%;
+    overflow-x: scroll;
+  }
+}
