add logo top bar and responsive table

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,7 +1,14 @@
 <mat-toolbar
   class="toolbar-main d-flex align-items-center justify-content-between"
 >
-  <h1 class="d-flex align-items-center">Travel Portal</h1>
+  <h1 class="d-flex align-items-center">
+    <img
+      src="../../../assets/img/logo-airline.svg"
+      alt="Travel Portal"
+      width="40"
+    />
+    Travel Portal
+  </h1>
   <button mat-icon-button aria-label="Menu" (click)="drawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
