--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -1,22 +1,31 @@
 .toolbar-main {
   background: var(--red);
   color: #fff;
+
+  h1 {
+    font-weight: bold;
+
+    img {
+      margin-right: 0.5rem;
+    }
+  }
 }
 
 .main-container {
   width: 100vw;
   height: 100vh;
+  padding-bottom: 4rem;
 
   &-content {
     max-width: 1320px;
     margin: auto;
-    padding: 2rem;
+    padding: 1rem;
   }
 }
 
 .sidenav {
   width: 265px;
-  height: calc(100vh - 64px);
+  height: calc(100vh - 56px);
   background-color: var(--red600);
   color: #fff;
 }
@@ -29,16 +38,18 @@
   line-height: normal;
   justify-content: center;
   align-content: center;
+  font-size: 0.95rem;
 
   b {
     color: #181c32;
     width: 100%;
+    margin-bottom: 5px;
   }
 
   span {
     width: 100%;
     display: block;
     color: #a1a5b7;
-    font-size: 0.9rem;
+    font-size: 0.75rem;
   }
 }
