--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -1,33 +1,41 @@
 <mat-card>
-  <mat-card-title>Usuarios</mat-card-title>
-  <mat-card-subtitle>Inicio - Usuarios</mat-card-subtitle>
   <mat-card-content>
-    <div class="table-wrap">
+    <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" class="table">
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Position Column -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <th mat-header-cell *matHeaderCellDef style="min-width: 150px">
+            Name
+          </th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <th mat-header-cell *matHeaderCellDef style="min-width: 200px">
+            Email
+          </th>
           <td mat-cell *matCellDef="let element">{{ element.email }}</td>
         </ng-container>
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef style="min-width: 100px">
+            Status
+          </th>
           <td mat-cell *matCellDef="let element">{{ element.status }}</td>
         </ng-container>
         <ng-container matColumnDef="rol">
-          <th mat-header-cell *matHeaderCellDef>Role</th>
+          <th mat-header-cell *matHeaderCellDef style="min-width: 100px">
+            Role
+          </th>
           <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
         </ng-container>
         <ng-container matColumnDef="joined date">
-          <th mat-header-cell *matHeaderCellDef>Joined date</th>
+          <th mat-header-cell *matHeaderCellDef style="min-width: 200px">
+            Joined date
+          </th>
           <td mat-cell *matCellDef="let element">{{ element.joinedDate }}</td>
         </ng-container>
 
