--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -7,36 +7,36 @@
 
         <!-- Position Column -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef style="min-width: 150px">
-            Name
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.name }}
+          </td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef style="min-width: 200px">
-            Email
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.email }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef style="min-width: 100px">
-            Status
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.status }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="rol">
-          <th mat-header-cell *matHeaderCellDef style="min-width: 100px">
-            Role
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
+          <th mat-header-cell *matHeaderCellDef>Role</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.rol }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="joined date">
-          <th mat-header-cell *matHeaderCellDef style="min-width: 200px">
-            Joined date
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.joinedDate }}</td>
+          <th mat-header-cell *matHeaderCellDef>Joined date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.joinedDate }}
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
