change login design

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -13,8 +13,8 @@
       novalidate
     >
       <p class="login-label-session">Utiliza tus credenciales de acceso</p>
-      <div class="form-control">
-        <mat-form-field appearance="fill">
+      <div>
+        <mat-form-field appearance="standard">
           <mat-label>Correo electrónico</mat-label>
           <input
             matInput
@@ -27,7 +27,7 @@
         </mat-form-field>
       </div>
       <div class="form-control">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="standard">
           <mat-label>Contraseña</mat-label>
           <input
             type="password"
