--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -8,17 +8,6 @@
   position: relative;
   z-index: 1;
 
-  &:after {
-    content: '';
-    background: rgba(#000, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-  }
-
   &-title {
     color: var(--red);
     display: block;
@@ -44,7 +33,7 @@
     color: #181c32;
     display: block;
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
   }
 
   form {
@@ -56,9 +45,8 @@
       min-width: 350px;
     }
   }
+}
 
-  mat-form-field {
-    margin-bottom: 0.5rem;
-    width: 100%;
-  }
+.form-control {
+  margin-bottom: 1rem;
 }
