--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 :root {
   --red: #ed0707;
   --red600: #de0108;
+  --gray-text: #181c32;
+  --gray-light-text: #a1a5b7;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 html,
@@ -13,6 +19,7 @@ body {
 body {
   margin: 0;
   background-color: #f5f8fa;
+  color: var(--gray-text);
   overflow-x: hidden;
 }
 
@@ -37,13 +44,6 @@ ol {
   font-size: 1rem;
 }
 
-.mat-form-field-appearance-fill .mat-form-field-flex {
-  color: #5e6278;
-  background-color: #f5f8fa;
-  border: 1px solid transparent;
-  font-size: 0.9rem;
-}
-
 .mat-raised-button.mat-warn {
   background-color: var(--red);
 }
@@ -55,6 +55,10 @@ ol {
   padding: 0.75rem 1rem;
   font-weight: 600;
   border-radius: 0.475rem;
+}
+
+.mat-card {
+  color: var(--gray-text);
 }
 
 mat-form-field {
