update prettier config

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,13 +1,7 @@
-<mat-toolbar
-  class="toolbar-main d-flex align-items-center justify-content-between"
->
+<mat-toolbar class="toolbar-main d-flex align-items-center justify-content-between">
   <div class="d-flex align-items-center">
     <h1 class="d-flex align-items-center">
-      <img
-        src="../../../assets/img/logo-airline.svg"
-        alt="Travel Portal"
-        width="40"
-      />
+      <img src="../../../assets/img/logo-airline.svg" alt="Travel Portal" width="40" />
       Travel Portal
     </h1>
   </div>
