--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -11,31 +11,7 @@
 
 .sidenav {
   width: 265px;
-  height: calc(100vh - 56px);
+  height: calc(100vh - var(--padding-top));
   background-color: var(--red600);
   color: #fff;
-}
-
-.breadcrumbs-bar {
-  background: #fff;
-  overflow: hidden;
-  flex-wrap: wrap;
-  flex-direction: column;
-  line-height: normal;
-  justify-content: center;
-  align-content: center;
-  font-size: 0.95rem;
-
-  b {
-    color: #181c32;
-    width: 100%;
-    margin-bottom: 5px;
-  }
-
-  span {
-    width: 100%;
-    display: block;
-    color: #a1a5b7;
-    font-size: 0.75rem;
-  }
 }
