add resposive functionality for breadcrumb

--- a/src/app/layout/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/breadcrumbs/breadcrumbs.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="breadcrumbs-bar">
+<mat-toolbar class="breadcrumbs-bar" [ngClass]="'breadcrum-' + mode">
   <b>Lista de usuarios </b>
   <span>Administración de usuarios - Usuarios - Lista de usuarios</span>
 </mat-toolbar>
