--- a/src/app/layout/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/layout/breadcrumbs/breadcrumbs.component.scss
@@ -1,12 +1,18 @@
 @import 'mq';
 
 .breadcrumbs-bar {
+  position: fixed;
+  top: var(--padding-top);
+  right: 0;
+  left: 0;
+  z-index: 5;
   background: #fff;
   overflow: hidden;
   line-height: normal;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  transition: left 0.3s ease;
 
   @include mq(md) {
     padding-left: 2rem;
@@ -32,5 +38,11 @@
   span {
     color: var(--gray-light-text);
     font-size: 0.75rem;
+  }
+}
+
+.breadcrum-collapse {
+  @include mq(lg) {
+    left: 265px;
   }
 }
